<resources>
    <string name="app_name">MessengerF</string>
    <string name="messengerf">MessengerF</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="sign_up_button">Sign up</string>
    <string name="name_hint">Name</string>
    <string name="last_name_hint">Last name</string>
    <string name="age_hint">How old are you?</string>
    <string name="reset_password">Reset password</string>
    <string name="logout_item">Logout</string>
    <string name="fill_all_fields">Please, fill all the fields</string>
    <string name="type_your_message">Type your message</string>
</resources>